Finished adding retrieve single contribution
