# api/server/documentation/api_docs.json
@@ -237,7 +237,6 @@
         "x-codegen-request-body-name": "body"
       }
     },
-
     "/users/{userId}/": {
       "delete": {
         "tags": ["Users"],
@@ -435,7 +434,6 @@
         "x-codegen-request-body-name": "body"
       }
     },
-
     "/contributions/{userId}/": {
       "get": {
         "tags": ["Contributions"],
@@ -464,6 +462,46 @@
           },
           "200": {
             "description": "User contributions retrieved successfully"
+          },
+          "401": {
+            "description": "Unauthorized request, please login"
+          },
+          "504": {
+            "description": "Server error occurred",
+            "content": {}
+          }
+        },
+        "x-codegen-request-body-name": "body"
+      }
+    },
+    "/contributions/contribution/{contributionId}/": {
+      "get": {
+        "tags": ["Contributions"],
+        "summary": "Get a single contribution",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "operationId": "getAsingleContribution",
+        "parameters": [
+          {
+            "name": "contributionId",
+            "in": "path",
+            "description": "Get a single contribution uniquely identified by Id",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "No contribution found with this Id",
+            "content": {}
+          },
+          "200": {
+            "description": "Contribution details returned successfully"
           },
           "401": {
             "description": "Unauthorized request, please login"
